# raglineage

./: .gitignore  .gitmessage  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  README.md  UPLOAD_INSTRUCTIONS.md  deploy_to_pypi.sh  push_to_github.sh  pyproject.toml  setup_github.sh  upload_to_pypi.sh  verify_installation.py
.github/workflows/: pypi-publish.yml  tests.yml
examples/: README.md  raglineage.example.yaml
examples/basic_usage/: README.md  example.py
examples/comprehensive_example/: README.md  comprehensive_example.py
examples/data/: products.csv  sample.txt
examples/example/: README.md  example.py
raglineage/: __init__.py  api.py  config.py
raglineage/audit/: __init__.py  auditor.py  checks.py
raglineage/cli/: __init__.py  main.py
raglineage/embedding/: __init__.py  base.py  local.py  openai.py
raglineage/ingest/: __init__.py  auto.py  base.py  files.py  tabular.py
raglineage/lineage/: __init__.py  diff.py  graph.py  versioning.py
raglineage/retrieval/: __init__.py  filters.py  retriever.py
raglineage/schemas/: __init__.py  audit.py  dataset.py  lineage_node.py  stats.py
raglineage/store/: __init__.py  base.py  faiss_store.py  mapping.py
raglineage/transform/: __init__.py  base.py  chunkers.py  dedupe.py  normalize.py
raglineage/utils/: __init__.py  hashing.py  io.py  logging.py
tests/: __init__.py  test_end_to_end_small_dataset.py  test_graph_diff.py  test_incremental_update.py  test_lineage_node.py
