[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raglineage"
version = "0.2.5"
description = "Lineage-aware RAG engine for auditable, reproducible, versioned retrieval and answers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
# Note: Using text format for compatibility
authors = [
    {name = "Pranav Motarwar", email = "pranav.motarwar@example.com"}
]
keywords = ["rag", "lineage", "provenance", "vector-search", "nlp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
openai = [
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/PranavMotarwar/raglineage"
Documentation = "https://github.com/PranavMotarwar/raglineage"
Repository = "https://github.com/PranavMotarwar/raglineage"
Issues = "https://github.com/PranavMotarwar/raglineage/issues"

[project.scripts]
raglineage = "raglineage.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["raglineage*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=raglineage --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
